WIP:workign on UI logic
Co-authored-by: Daniel Yakovlev <daniel.yakovlev@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -4,5 +4,12 @@
   <title>Sudoku Checker</title>
 </head>
 <body>
+  <form id="board-form">
+  <label for="size">
+    size of board</label>
+  <input type="number" name="size" id="size">
+  <button type="submit">submit</button>
+  <div id="board" class="board"></div>
+</form>
 </body>
 </html>
